--- a/conplake/WebContent/resources/css/info_concert.css
+++ b/conplake/WebContent/resources/css/info_concert.css
@@ -43,12 +43,16 @@ h3.concert_subTitle {width:900px; height:30px; line-height:30px; font-size:16px;
 
 #table_setList, #table_review { table-layout:fixed;}
 #table_setList th, #table_setList td, #table_review th, #table_review td{ height:30px;}
+#table_editSetList th, #table_editSetList td{ height:35px;}
+
 
 .setListNum{ width:100px;}
 .setListTitle{ width:600px;}
 .setListLink{ width:200px;}
 
-#table_setList p, #table_review p, #table_review th p{ white-space:nowrap; text-overflow:ellipsis; overflow:hidden;}
+.setListNum p, .setListLink p {text-align:center;}
+
+#table_setList p, #table_editSetList p, #table_review p, #table_review th p{ white-space:nowrap; text-overflow:ellipsis; overflow:hidden;}
 
 .reviewNum p{ width:100px; text-align:center;}
 th.reviewTitle p{ width:450px; text-align:center;}
