--- a/conplake/WebContent/resources/css/info_hall.css
+++ b/conplake/WebContent/resources/css/info_hall.css
@@ -42,7 +42,7 @@ div#seatReview {width:900px; height:500px;}
 #p_searchSeatReview select {height:28px;}
 
 
-.ul_seatReview {width:900px; height:380px; display:block;}
+.ul_seatReview {width:900px; height:400px; max-width:900px; max-height:400px; display:block;}
 .ul_seatReview p{ white-space:nowrap; text-overflow:ellipsis; overflow:hidden;}
 .ul_seatReview li {
     -moz-border-bottom-colors: none;
@@ -54,12 +54,16 @@ div#seatReview {width:900px; height:500px;}
     border-style: solid;
     border-width: 1px;
     float: left;
-	margin-right:25px;
+	margin-right:20px;
    	margin-bottom:20px;
-    position: relative;
-    width: 158px;
+    
+    width: 158px; max-width: 158px;
+    height:188px; max-height:188px; 
+    
 }
 .ul_seatReview li.list_lastLine {margin-right:0;}
+
+
 
 .seat_title{
     color: #333;
@@ -68,7 +72,7 @@ div#seatReview {width:900px; height:500px;}
 	height:20px;
     line-height: 14px;
     overflow: hidden;
-    padding: 6px 12px 0;
+    padding: 5px 12px 0;
     text-overflow: ellipsis;
 }
 
