--- a/conplake/WebContent/resources/css/info_concert.css
+++ b/conplake/WebContent/resources/css/info_concert.css
@@ -119,7 +119,7 @@ p#mdText{ float:left; width:240px; padding-right:10px;  }
 
 
 
-#modalWindowWrap {width:100%; height:100%; position:fixed; background:rgba(0,0,0,.5); left:0; top:0; z-index:999; }
+#modalWindowWrap {width:100%; height:100%; position:fixed; background:rgba(0,0,0,.5); left:0; top:0; z-index:999; display:none; }
 #modalWindow{position:absolute; width:400px; height:540px; top:50%; left:50%; margin-left:-200px; margin-top:-275px; border:1px solid #333; background:#fff; box-shadow : rgba(0,0,0,0.5) 0 0 8px 3px;}
 
 #mdHeader{ width:100%; height:40px; background:#666;}
