--- a/conplake/WebContent/resources/css/info_hall.css
+++ b/conplake/WebContent/resources/css/info_hall.css
@@ -8,6 +8,7 @@
 #seatReview {display:none;}
 #hallMap {display:none;}
 #hallOngoing #p_setList, #p_review { height:30px; padding-top:15px;}
+#hallReview {display:none;}
 
 
 
@@ -99,3 +100,5 @@ input.inputSeat { width:65px; height:24px; margin-left:10px; padding-left:5px;}
 #seatPicWrap{ width:448px; height:248px; padding:5px; border:1px solid #ccc; border-radius:2px;}
 #input_seatPicName{ width:350px;}
 #submit_seatPic{ margin-top:10px; border:none; background:#666; color:#eee;}
+
+#p_review span#span_hallReview{ width:165px; margin-left:420px;}
