--- a/conplake/WebContent/resources/css/header.css
+++ b/conplake/WebContent/resources/css/header.css
@@ -18,9 +18,9 @@ header {width:100%; height:110px; position:fixed; z-index:999;}
 #imgLogo {position:absolute; left:50%; margin-left:-105px; margin-top:10px; }
 
 
-.pop{ width:88px; height:105px; padding-top:5px; display:none; position:absolute; z-index:995; right:51px; top:26px; color:#fff; background:#333; border:1px solid #666; border-radius:2px;}
+.pop{ width:88px; height:127px;  display:none; position:absolute; z-index:995; right:51px; top:26px; color:#fff; background:#333; border:1px solid #666; border-radius:2px;}
 .pop li{ }
-.pop li a{ color:#eee; padding-left:5px; height:20px; line-height:20px; }
+.pop li a{ color:#eee; padding-left:5px; height:25px; line-height:25px; }
 .pop li a:hover{ color:#fff;}
 
-#pop_addMenu{ height:50px; padding-top:5px; right:140px;}
+#pop_addMenu{ height:52px; right:215px;}
