--- a/conplake/WebContent/resources/css/common.css
+++ b/conplake/WebContent/resources/css/common.css
@@ -55,8 +55,23 @@ select::-ms-expand {
 	background-color:#464646;
 }
 
-
-
+.rButton { background: #666 none repeat scroll 0 0;
+	border:#666;
+    border-style: solid;
+    border-width: 1px;
+    box-sizing: border-box;
+    color: #fff;
+    display: inline-block;
+    font-size: 14px;
+    width:100px;
+	height: 30px;
+    padding: 0 8px;
+	float:right;
+	}
+	
+.rButton:hover {
+	background-color:#464646;
+}
 .input_category {
   width: 200px; /* 원하는 너비설정 */
   padding: 5px 0 5px 5px; /* 여백으로 높이 설정 */
