--- a/conplake/WebContent/resources/css/note.css
+++ b/conplake/WebContent/resources/css/note.css
@@ -1,6 +1,6 @@
 @CHARSET "UTF-8";
 
-#modalWindowWrap_header{ width:100%; height:100%; position:fixed; background:rgba(0,0,0,.8); 
+#modalWindowWrap_note_header{ width:100%; height:100%; position:fixed; background:rgba(0,0,0,.8); 
 left:0; top:0; z-index:999; display:none; }
 
 #modalWindow3{ position:absolute; width:800px; height:440px; top:50%; left:50%; margin-left:-400px; 
