--- a/conplake/WebContent/resources/css/readReview.css
+++ b/conplake/WebContent/resources/css/readReview.css
@@ -3,7 +3,7 @@
 
 #table_readReview {width:900px;}
 #table_readReview th {text-align:left; padding-left:10px; font-weight:normal;}
-#table_readReview tr, #table_reply tr { border-bottom:1px solid #ccc;}
+#table_readReview tr, .table_reply tr { border-bottom:1px solid #ccc;}
 
 #th_titleReadReview{ height:28px; background:#f3f3f3; border-top:1px solid #ccc; border-bottom:1px solid #ccc;}
 #th_infoReadReview{ height:25px;}
@@ -32,7 +32,7 @@
 #editReview:hover, #deleteReview:hover {background:#f5f5f5;}
 
 
-#p_reply{ width:890px; border-top:1px solid #ccc; border-bottom:1px solid #ccc; font: bold 14px Arial, Helvetica, sans-serif;  color:#999; padding-left:10px; line-height:30px;}
+.p_reply{ width:890px; border-top:1px solid #ccc; border-bottom:1px solid #ccc; font: bold 14px Arial, Helvetica, sans-serif;  color:#999; padding-left:10px; line-height:30px;}
 
 #table_readReview { margin-bottom:60px;}
 
@@ -48,6 +48,6 @@
 .tr_reply #td_replyDate p{height:50px; line-height:20px; padding-right:15px; color:#666; font-size:11px;}
 .tr_reply #td_replyDate input {background:#fff; border:1px solid #ccc; width:50px; color:#666;}
 
-#div_inputReply {width:860px; border-right:none; text-align:left; height:100px; padding:15px 20px; background:#f5f5f5; border-bottom:1px solid #ccc;}
-#div_inputReply textarea {float:left; width:735px; height:78px; border-color:#ccc; resize:none; padding:10px; border-top-right-radius:0; border-bottom-right-radius:0; border-right:0; color:#333;}
-#div_inputReply input {float:left; width:100px; height:100px; background:#fff; border:1px solid #ccc; border-radius:3px; border-top-left-radius:0; border-bottom-left-radius:0; color:#666;}
+.div_inputReply {width:860px; border-right:none; text-align:left; height:100px; padding:15px 20px; background:#f5f5f5; border-bottom:1px solid #ccc;}
+.div_inputReply textarea {float:left; width:735px; height:78px; border-color:#ccc; resize:none; padding:10px; border-top-right-radius:0; border-bottom-right-radius:0; border-right:0; color:#333;}
+.div_inputReply input {float:left; width:100px; height:100px; background:#fff; border:1px solid #ccc; border-radius:3px; border-top-left-radius:0; border-bottom-left-radius:0; color:#666;}
