--- a/conplake/WebContent/resources/css/note.css
+++ b/conplake/WebContent/resources/css/note.css
@@ -23,3 +23,20 @@ border-right:1px solid #ccc; box-shadow:#eee 2px 0 2px 0;}
 #noteTitle{ width:260px;}
 #noteDate{ width:160px; text-align:center;}
 
+.table_list{ table-layout:fixed;}
+
+.tr_list{ border-bottom:1px solid #ccc;}
+
+.tr_list th{ background:#eee; height:30px;}
+.tr_list td{ height:30px;}
+
+.table_list p{ text-align:center; white-space:nowrap; text-overflow:ellipsis; overflow:hidden;}
+
+
+#table_readNote{ width:100%;}
+#td_infoNote { width:640px; background:rgba(0,0,0,.025); height:50px; float:right; padding-left:10px; padding-top:5px;}
+#td_infoNote p { line-height:20px; text-align:left;}
+#td_contentNote{ height:279px; vertical-align:top; padding:10px;}
+#td_buttonNote{ height:43px; border-bottom:none;}
+
+#replyNote{ margin-right:10px;}
