--- a/conplake/WebContent/resources/css/common.css
+++ b/conplake/WebContent/resources/css/common.css
@@ -34,6 +34,7 @@ select::-ms-expand {
 	-webkit-appearance: none; /* 네이티브 외형 감추기 */
 	-moz-appearance: none;
 	appearance: none;
+	resize:none;
 	
 }
 
