좌석표사진업로드 친구추가버튼

--- a/conplake/WebContent/resources/css/info_hall.css
+++ b/conplake/WebContent/resources/css/info_hall.css
@@ -5,6 +5,7 @@
 .contentView {width:900px; padding-top:30px; }
 #hallIntro {display:block;}
 #hallOngoing {display:none;}
+#hallSeat{ display:none;}
 #seatReview {display:none;}
 #hallMap {display:none;}
 #hallOngoing #p_setList, #p_review { height:30px; padding-top:15px;}
@@ -93,7 +94,7 @@ div#seatReview {width:900px; height:500px;}
 .pp_top  {display:none;}
 
 
-#modalWindow2{position:absolute; width:500px; height:540px; top:50%; left:50%; margin-left:-250px; margin-top:-275px; border:1px solid #333; background:#fff; box-shadow : rgba(0,0,0,0.5) 0 0 8px 3px;}
+.modalWindow2{position:absolute; width:500px; height:540px; top:50%; left:50%; margin-left:-250px; margin-top:-275px; border:1px solid #333; background:#fff; box-shadow : rgba(0,0,0,0.5) 0 0 8px 3px;}
 #mdBody1{ padding:10px 20px 0; height:84px; border-bottom:1px solid #ccc; }
 #mdBody2{ padding:10px 20px 0; height:375px;  }
 #p_searchSeatReview span {display:block; line-height:30px; color:#333;}
@@ -101,9 +102,21 @@ input.inputSeat { width:65px; height:24px; margin-left:10px; padding-left:5px;}
 
 #p_seatPic{ height:65px;}
 #label_seatPic{ display:block; line-height:30px; clear:both;}
+#label_seatReviewPic{ display:block; line-height:30px; clear:both;}
 
 #seatPicWrap{ width:448px; height:248px; padding:5px; border:1px solid #ccc; border-radius:2px;}
+#seatReviewPicWrap{ width:448px; height:248px; padding:5px; border:1px solid #ccc; border-radius:2px;}
+
 #input_seatPicName{ width:350px;}
+#input_seatReviewPicName{ width:350px;}
+
 #submit_seatPic{ margin-top:10px; border:none; background:#666; color:#eee;}
+#submit_seatReviewPic{ margin-top:10px; border:none; background:#666; color:#eee;}
 
 #p_review span#span_hallReview{ width:165px; margin-left:420px;}
+
+
+
+#div_seatPic{ width:900px; height:auto;}
+
+#modalWindow2_seat{ height:450px; margin-top:-225px;}
