--- a/conplake/WebContent/WEB-INF/views/info_hall.html
+++ b/conplake/WebContent/WEB-INF/views/info_hall.html
@@ -274,7 +274,7 @@ div#seatReview {width:900px; height:500px;}
 #p_searchReview select, #p_searchReview input{float:left;}
 #p_searchReview select {height:28px;}
 .input_searchReview { width:200px; height:24px; padding-left:5px; margin-left:10px;}
-#btn_searchReview a{ width:24px; height:24px; display:block; background:url(../img/search.png) no-repeat center center; margin-left:5px; float:right;}
+.btn_searchReview a{ width:24px; height:24px; display:block; background:url(../img/search.png) no-repeat center center; margin-left:5px; float:right;}
 
 
 .ul_seatReview {width:900px; height:380px; display:block;}
