--- a/conplake/WebContent/resources/css/info_concert.css
+++ b/conplake/WebContent/resources/css/info_concert.css
@@ -80,7 +80,7 @@ td#reviewId p, td#letsGoId p{ width:100px; text-align:left;}
 #p_searchReview select, #p_searchReview input, #p_searchReview span{float:right;}
 #p_searchReview select {height:28px;}
 .input_searchReview { width:200px; height:24px; padding-left:5px; margin-left:10px;}
-#btn_searchReview a{ width:24px; height:24px; display:block; background:url(../img/search.png) no-repeat center center; margin-left:5px; float:right;}
+.btn_searchReview a{ width:24px; height:24px; display:block; background:url(../img/search.png) no-repeat center center; margin-left:5px; float:right;}
 
 
 .p_review span {width:165px;margin-left:355px;}
